# qt-compression

./: .gitignore  CMakeLists.txt  README.md
build32/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  qt-compression.sln  qt-compression.vcxproj  qt-compression.vcxproj.filters
build32/qt-compression_autogen/: mocs_compilation.cpp
build32/qt-compression_autogen/include_Debug/: ui_mainwindow.h
build32/qt-compression_autogen/include_Debug/6YEA5652QU/: moc_FileHandler.cpp  moc_FileHandler.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d
build32/qt-compression_autogen/include_Release/: ui_mainwindow.h
build32/qt-compression_autogen/include_Release/6YEA5652QU/: moc_FileHandler.cpp.d  moc_MainWindow.cpp.d
forms/: MainWindow.ui
include/: BinaryData.h  Component.h  DeltaDecorator.h  FileHandler.h  MainWindow.h  SClass.h  SubtractionDecorator.h  ZeroClass.h  resource.h
resources/: qt-compression.rc
src/: BinaryData.cpp  Component.cpp  DeltaDecorator.cpp  FileHandler.cpp  MainWindow.cpp  SClass.cpp  SubtractionDecorator.cpp  ZeroClass.cpp  main.cpp
